[package]
name = "qhyper"
version.workspace = true
edition.workspace = true

[dependencies]
buddy_system_allocator = "0.11"
log = "0.4"
page-table-generic = "0.5"
ansi_rgb = "0.2"
rgb = "0.8"
fdt-parser = "0.4"

[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "10.0"
page-table-arm = "0.1"
